# kira

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  optimize-linux-wayland.sh  package.json  vite.config.ts
.cargo/: config.toml
.github/: SECRETS_SETUP.md  SECURITY.md  dependabot.yml
.github/workflows/: release.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/id/xmsaether/kira/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/id/xmsaether/kira/: MainActivity.kt
android/app/src/main/java/id/xmsaether/kira/jni/: KiraCoreNative.kt
android/app/src/main/jni/: CMakeLists.txt  rust_jni.cpp
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/id/xmsaether/kira/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
kira-core/: Cargo.toml
kira-core/src/: KiraCore.rs  lib.rs
kira-core/src/device/: app_manager.rs  display.rs  fastboot.rs  file_manager.rs  info.rs  logcat.rs  mod.rs  performance.rs  process.rs  root.rs  shell.rs  system.rs
kira-core/tests/: logcat_integration.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/components/: ShellPanel.svelte  Sidebar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/process-manager/: +page.svelte
src/routes/shell/: +page.svelte
src/styles/: base.css  tailwind-theme.css  theme.css
(+11 files in other folders)
