[package]
name = "kira-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
adb_client = "3.1.1"
fastboot-protocol = "0.3.1"
anyhow.workspace = true
serde.workspace = true
thiserror = "2.0.18"
tokio.workspace = true


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
